Limit uploads to csv or txt

--- a/app/views/shared/_second_form.html.erb
+++ b/app/views/shared/_second_form.html.erb
@@ -1,4 +1,4 @@
 <%= form_tag import_experiment_data_path, multipart: true do %>
-    <%= file_field_tag :file %>
+    <%= file_field_tag :file,  :accept => 'text/csv'%>
     <%= submit_tag "Submit experimental data (CSV)", class: "btn btn-smbtn-primary" %>
 <% end %>
