Changed app name to TraDIS Web Portal

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,11 @@
 <footer class="footer">
   <small>
-    SocGen
+    TraDIS Web Portal
   </small>
   <nav>
     <ul>
       <li><%= link_to "Sys.ID Search", search_path %></li>
-      <li><%= link_to "Upload", upload_path %></li>
+      <li><%= link_to "Upload + Curate", upload_path %></li>
       <li><%= link_to "Help",    help_path %></li>        
       <li><%= link_to "Sign Up", signup_path %></li>
       <li><%= link_to "Contact", contact_path %></li>      
