--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,11 @@
 <body>
   <div class="center jumbotron">
-    <h1>SocGen: Social Network Genomics</h1>
-    <h2>
-      TraDIS Web Portal
-    </h2>
+    <h1>TraDIS Web Portal</h1>
+    <br>
+
     <%= link_to "Sign up to view, upload or download data now!", signup_path, class: "btn btn-sm btn-primary" %>
   </div>
+  <br>
 
   <hr>
   <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="mynewdata">                         
